--- a/css/style.less
+++ b/css/style.less
@@ -172,14 +172,38 @@ section.contact {
 // SECTION OFFER //
 
 section.offer {
+   margin-top: 50px;
    font-family: "Lato";
   .col-md-12 {
-      text-align: center;
+      text-align: left;
      h2 {
         font-size: 42px;
         font-weight: 300;
         padding-bottom: 30px;
+        text-align: center;
+        font-family: "Lato";
+        padding-bottom: 60px;
+     }h3 {
+        text-align: center;
      }
+     h4 {
+        text-align: left;
+        font-family: "Lato";
+     }h5 {
+        font-family: "Roboto";
+        padding-top: 4px;
+        font-weight: 300;
+        font-size: 13px;
+        line-height: 15px;
+        color: lighten(@font3, 30%);
+     }
+   }i {
+      font-size: 63px;
+      float: left;
+      padding-right: 13px;
+      color: @main;
+   }.col-md-4 {
+      padding-bottom: 65px;
    }
 }
 
@@ -189,7 +213,7 @@ section.appointment {
    position: relative;
    background: @font1;
    font-family: "Lato";
-   height: 45vh;
+   height: 25vh;
    text-align: center;
    .container {
       position: absolute;
@@ -218,19 +242,87 @@ section.persons {
    .image3 {
       float: left;
    }
-   img {
 
-   }
-   .wrapper {
-     display: inline;
-      width: auto;
-   }
    .first {
       float: left;
       width: auto;
+   }
+   .wrapper {
+      display: inline-block;
+      float: left;
+      max-width: 53%;
+      padding-left: 20px;
+      padding-top: 10px;
+   }
+   h3 {
+      font-family: "Lato";
+      font-weight: 300;
+      font-size: 21px;
+   }
+   h4 {
+      font-family: "Roboto";
+      font-size: 13px;
+      color: lighten(@font3, 20%);
+      padding-top: 4px;
+   }
+   p {
+      font-family: "Roboto";
+      font-size: 13px;
+      line-height: 21px;
+   }
+   hr {
+      border: 0;
+      height: 1px;
+      background-image: linear-gradient(to right, rgba(39, 255, 172, 0), rgba(0, 188, 188, 0.75), rgba(0, 232, 170, 0));
+      max-width: 30%;
+   }
+
+   .socialicons2{
+      margin-top: 10px;
+      li {
+      display: inline-block;
+      padding: 10px;
+      border: 1px dashed @font1;
+      }
    }
 }
 
 .image10 {
    clear: both;
+}
+// SECTION HEART //
+
+section.heart {
+   .image10 {
+      padding: 55px 0px;
+      margin: 0 auto;
+      text-align: center;
+   }
+}
+
+
+// FOOTER //
+footer {
+   background: @font3;
+   text-align: center;
+   min-width: 100%;
+   min-height: 5vh;
+   color: white;
+   font-family: "Roboto";
+   font-size: 13px;
+
+   .container-fluid {
+   bottom: 0px;
+
+   }
+   .socialmedia3 li{
+      display: inline-block;
+      padding: 10px;
+   }
+   p {
+      line-height: 35px;
+   }
+   .col-md-4 {
+      margin-left: auto;
+   }
 }
