--- a/css/style.css
+++ b/css/style.css
@@ -439,15 +439,18 @@ section.aboutus h2 {
   padding-bottom: 10px;
   color: #13bfb1;
 }
-p {
+section.aboutus p {
   font-family: "Roboto";
-  font-size: 14px;
-  color: #737474;
-  line-height: 25px;
-}
-p:nth-of-type(2) {
+  line-height: 21px;
   font-size: 13px;
   color: #a6a7a7;
+}
+section.aboutus p:nth-of-type(2) {
+  font-size: 11px;
+  color: #c0c0c0;
+}
+section.welcome {
+  margin-bottom: 100px;
 }
 section.welcome h2 {
   font-family: "Lato";
@@ -462,7 +465,8 @@ section.welcome p {
   margin: 0 auto;
   width: 60%;
   text-align: center;
-  line-height: 16px;
+  line-height: 22px;
+  color: #a6a7a7;
 }
 section.separator {
   text-align: center;
@@ -486,14 +490,29 @@ section.factors i {
 section.factors h5 {
   font-size: 50px;
 }
+section.details {
+  margin-top: 100px;
+}
 section.details h2 {
+  padding-top: 40px;
   font-family: "Lato";
-  font-size: 25px;
+  font-size: 30px;
   font-weight: 300;
   padding-bottom: 10px;
 }
 section.details p {
   font-family: "Roboto";
   font-size: 13px;
-  line-height: 17px;
+  line-height: 24px;
+  font-weight: normal;
+  color: #a6a7a7;
+}
+section.details img {
+  max-width: 400px;
+  filter: hue-rotate(330deg);
+  padding-bottom: 100px;
+}
+section.details img:hover {
+  filter: hue-rotate(0deg);
+  filter: drop-shadow(0px 2px 2px);
 }
