--- a/css/style.less
+++ b/css/style.less
@@ -453,15 +453,15 @@ section.aboutus {
       font-weight: 300;
       padding-bottom: 10px;
       color: @main;
-   }
-}p {
-   font-family: "Roboto";
-   font-size: 14px;
-   color: @font3;
-   line-height: 25px;
-   &:nth-of-type(2) {
+   }p {
+      font-family: "Roboto";
+      line-height: 21px;
       font-size: 13px;
       color: lighten(@font3, 20%);
+      &:nth-of-type(2) {
+         font-size: 11px;
+         color: lighten(@font3, 30%);
+      }
    }
 }
 
@@ -469,6 +469,7 @@ section.aboutus {
 // SECTION WELCOME //
 
 section.welcome {
+   margin-bottom: 100px;
    h2 {
       font-family: "Lato";
       font-size: 30px;
@@ -481,7 +482,8 @@ section.welcome {
       margin: 0 auto;
       width: 60%;
       text-align: center;
-      line-height: 16px;
+      line-height: 22px;
+      color: lighten(@font3, 20%);
    }
 }
 // SECTION SEPARATOR //
@@ -517,14 +519,26 @@ section.factors {
 // SECTION DETAILS //
 
 section.details {
+   margin-top: 100px;
    h2 {
+      padding-top: 40px;
       font-family: "Lato";
-      font-size: 25px;
+      font-size: 30px;
       font-weight: 300;
       padding-bottom: 10px;
    }p {
       font-family: "Roboto";
       font-size: 13px;
-      line-height: 17px;
+      line-height: 24px;
+      font-weight: normal;
+      color: lighten(@font3, 20%);
+   }img {
+      max-width: 400px;
+      filter: hue-rotate(330deg);
+      padding-bottom: 100px;
+   }
+   img:hover {
+      filter: hue-rotate(0deg);
+      filter: drop-shadow(0px 2px 2px )
    }
 }
