--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,11 @@ body {
 .jumbotron .social {
   text-align: right;
 }
+.jumbotron .social li:hover {
+  color: white;
+  cursor: pointer;
+  box-shadow: 1px 1px 2px #007171;
+}
 .jumbotron .container {
   margin-top: -30px;
 }
@@ -68,39 +73,51 @@ span {
   color: #13bfb1;
 }
 .navbar {
-  height: 90px;
+  height: 85px;
   background: white;
 }
 .navbar-nav a {
   border-right: 1px dotted #d6d6d6;
-  line-height: 25px;
+  box-sizing: content-box;
   color: #333333;
+  padding: 35px 0px;
   display: block;
-  width: 90px;
+  width: 120px;
   text-align: center;
 }
+.navbar-nav a:hover {
+  border-top: 3px solid #00e3e3;
+  color: #13bfb1;
+}
 .main-info {
-  font-family: "Lato";
   text-align: center;
+  margin-bottom: 60px;
 }
 .main-info h1 {
   font-size: 3vw;
   font-weight: 300;
   margin-bottom: 20px;
   color: #292b2c;
+  font-family: "Lato";
 }
 .main-info h3 {
   font-size: 21px;
   font-weight: 300;
   margin-top: 10px;
   margin-bottom: 10px;
+  font-family: "Lato";
 }
 .main-info h4 {
   font-size: 13px;
-  color: #a6a7a7;
+  color: #626262;
   margin-bottom: 20px;
+  line-height: 20px;
+  font-weight: normal;
+  font-family: "Roboto";
+  margin-bottom: 30px;
 }
 .main-info h5 {
+  font-family: "Roboto";
   margin-bottom: 70px;
   color: #a6a7a7;
   font-size: 13px;
@@ -116,6 +133,7 @@ section.contact {
   background: #ecf7f6;
   font-family: "Lato";
   font-weight: 300;
+  margin-bottom: 100px;
 }
 section.contact .image1 img {
   width: 99%;
@@ -157,6 +175,7 @@ section.contact .row .col-md-4 {
 }
 section.offer {
   margin-top: 50px;
+  margin-bottom: 100px;
   font-family: "Lato";
 }
 section.offer .col-md-12 {
@@ -165,7 +184,7 @@ section.offer .col-md-12 {
 section.offer .col-md-12 h2 {
   font-size: 42px;
   font-weight: 300;
-  padding-bottom: 30px;
+  padding-top: 10px;
   text-align: center;
   font-family: "Lato";
   padding-bottom: 60px;
@@ -186,7 +205,7 @@ section.offer .col-md-12 h5 {
   color: #c0c0c0;
 }
 section.offer i {
-  font-size: 63px;
+  font-size: 73px;
   float: left;
   padding-right: 13px;
   color: #13bfb1;
