--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,32 @@ body {
 .jumbotron .col-md-7 {
   line-height: 29px;
 }
+.jumbotron img.dentist {
+  width: 63%;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  animation: slidein 2s ease-in-out;
+  z-index: 8;
+}
+@keyframes slidein {
+  0% {
+    right: -2000px;
+    opacity: 0;
+  }
+  100% {
+    right: 0;
+    opacity: 1;
+  }
+}
+.jumbotron img.dentist2 {
+  width: 31%;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  animation: slidein 2s ease-in-out;
+  z-index: 0;
+}
 .jumbotron .social {
   text-align: right;
 }
@@ -50,7 +76,7 @@ body {
   font-size: 45px;
 }
 .jumbotron button {
-  background: #3bbbb0;
+  background: #13bfb1;
   color: white;
 }
 .jumbotron .btn-group {
@@ -58,6 +84,7 @@ body {
 }
 .jumbotron .btn-group .btn-calendar {
   border: #00d6a5;
+  border-right: 2px solid #71ffdf;
 }
 .jumbotron .title {
   margin-top: 10%;
@@ -72,9 +99,15 @@ body {
 span {
   color: #13bfb1;
 }
+span.sup {
+  color: #13bfb1;
+  vertical-align: super;
+  font-size: 13px;
+}
 .navbar {
   height: 85px;
   background: white;
+  z-index: 0;
 }
 .navbar-nav a {
   border-right: 1px dotted #d6d6d6;
@@ -115,9 +148,10 @@ span {
   font-weight: normal;
   font-family: "Roboto";
   margin-bottom: 30px;
+  text-shadow: 0px 0px 2px white;
 }
 .main-info h5 {
-  font-family: "Roboto";
+  font-family: "Tahoma";
   margin-bottom: 70px;
   color: #a6a7a7;
   font-size: 13px;
@@ -128,6 +162,8 @@ span {
 .main-info button {
   margin-top: 20px;
   margin-bottom: 61px;
+  color: #676767;
+  background: #f2f2f2;
 }
 section.contact {
   background: #ecf7f6;
@@ -139,12 +175,15 @@ section.contact .image1 img {
   width: 99%;
 }
 section.contact h2 {
+  font-family: "Lato";
+  font-weight: 300;
   font-size: 25px;
   padding: 10px 0px;
 }
 section.contact h3 {
   line-height: 22px;
   font-weight: 300;
+  font-size: 13px;
   font-family: "Roboto";
   padding: 0px 0px 20px 0px;
   color: #626262;
@@ -155,8 +194,7 @@ section.contact .hours {
   background-size: cover;
 }
 section.contact .address {
-  background-image: url(../img/message.png);
-  background-size: cover;
+  background: #13bfb1;
   color: white;
   font-weight: 300;
 }
@@ -395,6 +433,7 @@ section.breadcrumbrs {
   color: white;
   line-height: 40px;
   padding: 10px 10px;
+  z-index: 1;
 }
 .container {
   margin-bottom: 40px;
@@ -528,10 +567,9 @@ section.details p {
 }
 section.details img {
   max-width: 400px;
-  filter: hue-rotate(330deg);
   padding-bottom: 100px;
 }
 section.details img:hover {
-  filter: hue-rotate(0deg);
+  filter: hue-rotate(330deg);
   filter: drop-shadow(0px 2px 2px);
 }
