--- a/css/style.less
+++ b/css/style.less
@@ -22,6 +22,7 @@ body {
    overflow-x: hidden;
 }
 .jumbotron {
+   position: relative;
    background-image: url(../img/slide-doctor-bg.jpg);
    background-size: cover;
    min-height: 98vh;
@@ -29,8 +30,34 @@ body {
    position: relative;
    .col-md-7 {
       line-height: 29px;
+   }img.dentist {
+      width: 63%;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      animation: slidein 2s ease-in-out;
+      z-index: 8;
+   }
+   }
+@keyframes slidein {
+   0% {
+      right: -2000px;
+      opacity: 0;
+   }
+   100% {
+      right: 0;
+      opacity: 1;
    }
 }
+.jumbotron img.dentist2 {
+      width: 31%;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      animation: slidein 2s ease-in-out;
+      z-index: 0;
+}
+
 .jumbotron .social {
    text-align: right;
    & li:hover {
@@ -62,13 +89,15 @@ body {
    font-size: 45px;
 }
 .jumbotron button {
-   background: @font1;
+   background: @main;
    color: @font4;
 }
 .jumbotron .btn-group {
    margin-top: 30px;
+
    .btn-calendar {
       border: #00d6a5;
+      border-right: 2px solid darken(#bdfff0, 15%);
    }
 }
 .jumbotron .title {
@@ -84,9 +113,15 @@ body {
 span {
    color: #13bfb1;
 }
+span.sup {
+   color: #13bfb1;
+   vertical-align: super;
+   font-size: 13px;
+}
 .navbar {
    height: 85px;
    background: white;
+   z-index: 0;
 }
 .navbar-nav a{
    border-right: 1px dotted #d6d6d6;
@@ -129,9 +164,10 @@ span {
       font-weight: normal;
       font-family: "Roboto";
       margin-bottom: 30px;
+      text-shadow: 0px 0px 2px white;
    }
    h5 {
-      font-family: "Roboto";
+      font-family: "Tahoma";
       margin-bottom: 70px;
       color: lighten(@font3, 20%);
       font-size: 13px;
@@ -142,6 +178,8 @@ span {
    button {
       margin-top: 20px;
       margin-bottom: 61px;
+      color: #676767;
+      background: #f2f2f2;
    }
 }
 
@@ -156,12 +194,15 @@ section.contact {
       width: 99%;
    }
    h2 {
+      font-family: "Lato";
+      font-weight: 300;
       font-size: 25px;
       padding: 10px 0px;
    }
    h3 {
       line-height: 22px;
       font-weight: 300;
+      font-size: 13px;
       font-family: "Roboto";
       padding: 0px 0px 20px 0px;
       color: #626262;
@@ -172,8 +213,7 @@ section.contact {
       background-size: cover;
    }
    .address {
-      background-image: url(../img/message.png);
-      background-size: cover;
+      background: #13bfb1;
       color: white;
       font-weight: 300;
    }
@@ -400,6 +440,7 @@ section.breadcrumbrs{
    color: white;
    line-height: 40px;
    padding: 10px 10px;
+   z-index: 1;
 }
 
 // CONTACT //
@@ -552,11 +593,10 @@ section.details {
       color: lighten(@font3, 20%);
    }img {
       max-width: 400px;
-      filter: hue-rotate(330deg);
       padding-bottom: 100px;
-   }
-   img:hover {
-      filter: hue-rotate(0deg);
-      filter: drop-shadow(0px 2px 2px )
+
+   &:hover {
+    filter: hue-rotate(330deg);
+    filter: drop-shadow(0px 2px 2px );
    }
 }
