--- a/css/style.less
+++ b/css/style.less
@@ -120,7 +120,7 @@ span.sup {
 }
 .navbar {
    height: 85px;
-   background: white;
+   background: #ff0000;
    z-index: 0;
 }
 .navbar-nav a{
@@ -131,6 +131,7 @@ span.sup {
    display: block;
    width: 120px;
    text-align: center;
+   box-sizing: border-box;
    &:hover {
       border-top: 3px solid #00e3e3;
       color: @main;
